salesforce-metadata/objects/Comp_Line_Item__c/Comp_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Comp Line Item</label>
    <pluralLabel>Comp Line Items</pluralLabel>
    <nameField>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
        <displayFormat>CLI-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>