salesforce-metadata/objects/Comp_Line_Item__c/fields/Attribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Type__c</fullName>
    <label>Attribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
                <default>true</default>
                <label>Owner</label>
            </value>
            <value>
                <fullName>SE_Attached</fullName>
                <label>SE Attached</label>
            </value>
            <value>
                <fullName>SDR_Source</fullName>
                <label>SDR Source</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>