salesforce-metadata/objects/Comp_Line_Item__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <label>Commission Rate</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>