salesforce-metadata/objects/Comp_Line_Item__c/fields/Comp_Statement__c.field-meta.xml
<CustomField>
    <fullName>Comp_Statement__c</fullName>
    <label>Comp Statement</label>
    <type>MasterDetail</type>
    <referenceTo>Comp_Statement__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>