salesforce-metadata/objects/Comp_Line_Item__c/fields/Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount__c</fullName>
    <label>Credit Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Amount credited for this line item</description>
</CustomField>