salesforce-metadata/objects/Comp_Line_Item__c/fields/Is_Disputed__c.field-meta.xml
<CustomField>
    <fullName>Is_Disputed__c</fullName>
    <label>Is Disputed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>