salesforce-metadata/objects/Comp_Line_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Comp Line Items</relationshipLabel>
    <relationshipName>Comp_Line_Items</relationshipName>
</CustomField>