salesforce-metadata/objects/Comp_Line_Item__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE_Booking</fullName>
                <default>true</default>
                <label>AE Booking</label>
            </value>
            <value>
                <fullName>SDR_Source</fullName>
                <label>SDR Source</label>
            </value>
            <value>
                <fullName>SE_Overlay</fullName>
                <label>SE Overlay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>