salesforce-metadata/objects/Comp_Line_Item__c/fields/Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Split_Percent__c</fullName>
    <label>Split Percent</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>100</defaultValue>
    <description>Percentage of credit for split deals</description>
</CustomField>