salesforce-metadata/objects/Comp_Line_Item__c/fields/Tier_Applied__c.field-meta.xml
<CustomField>
    <fullName>Tier_Applied__c</fullName>
    <label>Tier Applied</label>
    <type>Text</type>
    <length>80</length>
    <description>Which tier was applied for this commission</description>
</CustomField>